[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Fases/Fase1/Fase1.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=2]
[ext_resource path="res://Scripts/MoveGameOver.gd" type="Script" id=3]
[ext_resource path="res://Fontes/earthorbiterbold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Cenas/HUD/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Cenas/Pontuations/Pontuations.tscn" type="PackedScene" id=6]
[ext_resource path="res://musica/arcade_war.wav" type="AudioStream" id=7]
[ext_resource path="res://musica/powerUp.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 4 )

[node name="Fase1" type="Node2D"]
pause_mode = 1
z_index = -1
script = ExtResource( 1 )

[node name="GameTime" type="Timer" parent="."]

[node name="CameraFase1" type="Camera2D" parent="."]
position = Vector2( -0.461304, 0.182617 )
anchor_mode = 0
current = true
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOverNode" type="Node2D" parent="CanvasLayer"]
z_index = 10
script = ExtResource( 3 )

[node name="GameOverButtons" type="VBoxContainer" parent="CanvasLayer/GameOverNode"]
margin_left = 635.445
margin_top = 570.573
margin_right = 1136.44
margin_bottom = 636.573
alignment = 1

[node name="RestartLevel" type="Button" parent="CanvasLayer/GameOverNode/GameOverButtons"]
margin_top = 5.0
margin_right = 500.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.0901961, 0.0705882, 0.462745, 1 )
text = "Restart Level"
flat = true

[node name="GameOver" type="Label" parent="CanvasLayer/GameOverNode"]
margin_left = 702.527
margin_top = 347.993
margin_right = 1037.53
margin_bottom = 548.993
custom_fonts/font = SubResource( 2 )
text = "GAME 
OVER"
align = 1
valign = 1

[node name="GameOverTwin" type="Tween" parent="CanvasLayer/GameOverNode"]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 5 )]

[node name="Pontuations" parent="CanvasLayer" instance=ExtResource( 6 )]

[node name="BattleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="PowerUpSong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
[connection signal="timeout" from="GameTime" to="." method="_on_GameTime_timeout"]
[connection signal="pressed" from="CanvasLayer/GameOverNode/GameOverButtons/RestartLevel" to="." method="_on_RestartLevel_pressed"]
[connection signal="finished" from="BattleMusic" to="." method="_on_BattleMusic_finished"]
